# ChantageStudio

./: CMakeLists.txt  Info.plist.in
src/: main.cpp  studio.qrc
src/data/: items.json
src/model/: item.cpp  item.h  item_category.h  item_list.cpp  item_list.h  item_set.h  item_type.h  item_type_list.cpp  item_type_list.h  mod.cpp  mod.h
src/ui/: editor_item.cpp  editor_item.h  elements_editor.cpp  elements_editor.h  mod_window.cpp  mod_window.h  status_editor.cpp  status_editor.h  tab_base.cpp  tab_base.h  tab_item_attributes.cpp  tab_item_attributes.h  tab_items.cpp  tab_items.h  weapon_flags_editor.cpp  weapon_flags_editor.h
